log/build_2024-09-10_13-42-19/drone_controlling/stderr.log
  File "/root/ros2_ws/install/drone_controlling/lib/python3.12/site-packages/drone_controlling/AICoordinates.py", line 125
    print(f"X coordinate {tracker_x + tracker_w * 0.5")
                                                     ^
SyntaxError: f-string: expecting '}'

